# S3PRL_VC

./: LICENSE  README.md  pyproject.toml  s3prlvc.ipynb
.devcontainer/: Dockerfile  devcontainer.json
s3prlvc/: config.py  config_gen_test.py  main_inference.py  main_train.py  model.py  train.py  trainer.py  utils.py
s3prlvc/data/: corpora.py  datamodule.py  dataset.py  pairs.py  pairs_test.py  preprocessing.py  split.py  split_test.py
s3prlvc/lightlightning/: README.md  config_gen.py  config_gen_test.py  train.py
s3prlvc/networks/: conditioning.py  decoder.py  encoder.py  taco2ar.py
