[tool.poetry]
name = "s3prlvc"
version = "0.0.1"
description = "Reimplementation of S3PRL-VC with PyTorch-Lightning"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/S3PRL_VC"
[tool.poetry.dependencies]
python = "^3.7"
torch = "*"
torchaudio = "*"
pytorch-lightning = "^1.4.9"
fsspec = {version = ">=2021.5", extras = ["http", "s3"]}
boto3 = "^1.16.18"
numpy = ">=1.17"
pyloudnorm = "^0.1.0"
librosa = "^0.8.0"
omegaconf = "^2.1.1"
speechcorpusy = {git = "https://github.com/tarepan/speechcorpusy.git", rev = "main"}
speechdatasety = {git = "https://github.com/tarepan/speechdatasety", rev = "main"}
tqdm = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"