[tool.poetry]
name = "s3prlvc"
version = "0.0.1"
description = "Reimplementation of S3PRL-VC with PyTorch-Lightning"
authors = ["Tarepan"]
readme = "README.md"
repository = "https://github.com/tarepan/S3PRL_VC"
[tool.poetry.dependencies]
python = "^3.7"
torch = "*"
torchaudio = "*"
pytorch-lightning = "^1.4.9"
fsspec = {version = ">=2021.5", extras = ["http", "s3"]}
boto3 = "^1.16.18"
numpy = ">=1.17"
pyloudnorm = "^0.1.0"
librosa = "^0.8.0"
omegaconf = "^2.1.1"
speechcorpusy = {git = "https://github.com/tarepan/speechcorpusy.git", rev = "main"}
speechdatasety = {git = "https://github.com/tarepan/speechdatasety.git", rev = "main"}
extorch = {git = "https://github.com/tarepan/extorch.git", rev = "main"}
# Need fairseq master (not latest stable version) & Patched Gambel-softmax
fairseq = {git = "https://github.com/tarepan/fairseq.git", rev = "main"}
s3prl = {git = "https://github.com/tarepan/s3prl.git"}
tqdm = "^4.0.0"
Resemblyzer = "0.1.1.dev0"
scikit-learn = "1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
  "line-too-long",
]